--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,191 @@
-torchvision
-transformers
-sentence_transformers
-ray
-accelerate
-datasketch
-pandas
-art
-tenacity
-boto3
-bpe
-fbgemm-gpu
-wandb
-spacy
-confection
-openai>=1.25.1
-anthropic
-mistralai
-google-generativeai
-google-cloud-aiplatform
-matplotlib
-fschat
-faiss-cpu
-fastparquet
-python-dotenv
-bitsandbytes
+accelerate==1.10.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anthropic==0.75.0
+anyio==4.12.0
+art==6.5
+async-timeout==5.0.1
+attrs==25.4.0
+bitsandbytes==0.48.2
+blis==1.3.3
+boto3==1.42.2
+botocore==1.42.2
+bpe==1.0
+cachetools==6.2.2
+catalogue==2.0.10
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.1.8
+cloudpathlib==0.23.0
+confection==0.1.5
+contourpy==1.3.0
+cramjam==2.11.0
+cycler==0.12.1
+cymem==2.0.13
+datasketch==1.8.0
+distro==1.9.0
+docstring_parser==0.17.0
+eval_type_backport==0.3.1
+exceptiongroup==1.3.1
+faiss-cpu==1.13.0
+fastapi==0.123.5
+fastparquet==2024.11.0
+fbgemm_gpu==1.3.0
+filelock==3.19.1
+fonttools==4.60.1
+frozenlist==1.8.0
+fschat==0.2.36
+fsspec==2025.10.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-ai-generativelanguage==0.6.15
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+google-cloud-aiplatform==1.129.0
+google-cloud-bigquery==3.38.0
+google-cloud-core==2.5.0
+google-cloud-resource-manager==1.15.0
+google-cloud-storage==3.6.0
+google-crc32c==1.7.1
+google-genai==1.47.0
+google-generativeai==0.8.5
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+grpc-google-iam-v1==0.14.3
+grpcio==1.76.0
+grpcio-status==1.71.2
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httplib2==0.31.0
+httpx==0.28.1
+huggingface-hub==0.36.0
+hypothesis==6.141.1
+idna==3.11
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+iniconfig==2.1.0
+invoke==2.2.1
+Jinja2==3.1.6
+jiter==0.12.0
+jmespath==1.0.1
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kiwisolver==1.4.7
+latex2mathml==3.78.1
+librt==0.6.3
+markdown-it-py==3.0.0
+markdown2==2.5.4
+MarkupSafe==3.0.3
+matplotlib==3.9.4
+mdurl==0.1.2
+mistralai==1.9.11
+mpmath==1.3.0
+msgpack==1.1.2
+multidict==6.7.0
+murmurhash==1.0.15
+mypy==1.19.0
+mypy_extensions==1.1.0
+networkx==3.2.1
+nh3==0.3.2
+nltk==3.9.2
+numpy==2.0.2
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+openai==2.8.1
+packaging==25.0
+pandas==2.3.3
+pathspec==0.12.1
+pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
+preshed==3.0.12
+prompt_toolkit==3.0.52
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.1.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+pyparsing==3.2.5
+pytest==8.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+ray==2.51.2
+referencing==0.36.2
+regex==2025.11.3
+requests==2.32.5
+rich==14.2.0
+rpds-py==0.27.1
+rsa==4.9.1
+s3transfer==0.16.0
+safetensors==0.7.0
+scikit-learn==1.6.1
+scipy==1.13.1
+sentence-transformers==5.1.2
+sentry-sdk==2.47.0
+shapely==2.0.7
+shortuuid==1.0.13
+six==1.17.0
+smart_open==7.5.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+spacy==3.8.11
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.2
+starlette==0.49.3
+svgwrite==1.4.3
+sympy==1.14.0
+tenacity==9.1.2
+thinc==8.3.9
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+tokenizers==0.22.1
+tomli==2.3.0
+toolz==1.1.0
+torch==2.8.0
+torchvision==0.23.0
+tqdm==4.67.1
+transformers==4.57.3
+triton==3.4.0
+typer-slim==0.20.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==1.26.20
+uvicorn==0.38.0
+wandb==0.23.1
+wasabi==1.1.3
+wavedrom==2.0.3.post3
+wcwidth==0.2.14
+weasel==0.4.3
+websockets==15.0.1
+wrapt==2.0.1
+yarl==1.22.0
+zipp==3.23.0
